Change for Image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="15" >
         <tr>
             <td>
-                <img src="/Users/mansipatel/Documents/Web Development/HTML - Personal site/images/mansi.png" alt="Profile Picture" height="200" width="300">
+                <img src="mansi.png" alt="Profile Picture" height="200" width="300">
             </td>
             <td>
                 <h1>Mansi Shah</h1>
