--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="15" >
         <tr>
             <td>
-                <img src="mansi.png" alt="Profile Picture" height="200" width="300">
+                <img src="https://github.com/MMDark/CV/blob/main/mansi.png" alt="Profile Picture" height="200" width="300">
             </td>
             <td>
                 <h1>Mansi Shah</h1>
